Shared modülünde heryerde kullanmak için confirm coponent oluşturudur. slide barda banka modülü kaldırıldı

--- a/src/webui/src/assets/i18n/en.json
+++ b/src/webui/src/assets/i18n/en.json
@@ -12,5 +12,7 @@
   "Close" : "Close",
   "Save" : "Save",
   "Project Code" : "Project Code",
-  "Project Name" : "Project Name"
+  "Project Name" : "Project Name",
+  "Yes": "Yes",
+  "No" : "No"
 }
