--- a/src/webui/src/assets/i18n/tr.json
+++ b/src/webui/src/assets/i18n/tr.json
@@ -12,6 +12,8 @@
   "Close" : "Vazgeç",
   "Save" : "Kaydet",
   "Project Code" : "Projec Kodu",
-  "Project Name" : "Projec Adı"
+  "Project Name" : "Projec Adı",
+  "Yes": "Evet",
+  "No" : "Hayır"
 
 }
