Projeye manager eklendi

--- a/src/webui/src/assets/i18n/en.json
+++ b/src/webui/src/assets/i18n/en.json
@@ -14,5 +14,6 @@
   "Project Code" : "Project Code",
   "Project Name" : "Project Name",
   "Yes": "Yes",
-  "No" : "No"
+  "No" : "No",
+  "Project Manager" : "Project Manager"
 }
