--- a/src/webui/src/assets/i18n/tr.json
+++ b/src/webui/src/assets/i18n/tr.json
@@ -14,6 +14,7 @@
   "Project Code" : "Projec Kodu",
   "Project Name" : "Projec Adı",
   "Yes": "Evet",
-  "No" : "Hayır"
+  "No" : "Hayır",
+  "Project Manager" : "Proje Yöneticisi"
 
 }
